# agent-rag

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_enable_vector_extension.py  0002_create_data_chunks_table.py
data/: openapi.json
ingest/: parser.py  run.py
ingest/v1/: embedder.py  loader.py
ingest/v2/: init_table.py  loader_llama.py
src/application/healthcheckers/: entity.py  interface.py  service.py  usecase.py
src/application/query_ask/: service.py  usecase_llama.py  usecase_manual.py
src/domain/query_ask/: entity.py  repository.py  usecase.py
src/infrastructure/: config.py
src/infrastructure/embeddings/: voyage.py
src/infrastructure/guardrails/: guardrails.py
src/infrastructure/healthcheckers/: postgres.py
src/infrastructure/llamaindex/: rag_client.py
src/infrastructure/llm/: claude.py
src/infrastructure/vector_store/: postgres.py
src/presentation/api/: main.py
src/presentation/api/commons/: dtos.py
src/presentation/api/resources/healthcheckers/: dtos.py  routes.py
src/presentation/api/resources/query_ask/: dtos.py  v1.py  v2.py
tests/unit/application/: test_usecase.py
tests/unit/infrastructure/: test_guardrails.py
