[tool.poetry]
name = "agent-rag"
version = "0.1.0"
description = "RAG agent that answers questions about API integrations"
authors = ["Alexander Gonzalez"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
# API
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-dotenv = "^1.0.0"
pydantic = "^2.9.0"
# LLM + embeddings — use >= because these are fast-moving 0.x packages
# where ^ locks to a single minor (e.g. ^0.40.0 = >=0.40.0,<0.41.0)
anthropic = ">=0.40.0"
voyageai = ">=0.3.0"
# Vector store + migrations
sqlalchemy = "^2.0.0"
alembic = "^1.14.0"
psycopg2 = "^2.9.0"
asyncpg = ">=0.29.0"
# LlamaIndex (v2 implementation) — same >= rationale; 0.8.x+ has no asyncpg upper-bound pin
llama-index-core = ">=0.12.0"
llama-index-llms-anthropic = ">=0.6.0"
llama-index-embeddings-voyageai = ">=0.3.0"
llama-index-vector-stores-postgres = ">=0.8.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.0"
httpx = "^0.28.0"

[tool.poetry.group.lint.dependencies]
ruff = "^0.8.0"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
